demo voices added

--- a/src/components/infopages/products/AIVoices.astro
+++ b/src/components/infopages/products/AIVoices.astro
@@ -82,7 +82,7 @@ import AllVoices from "../../global/AllVoices.jsx";
       </div>
     </div>
     <div class="mt-8">
-      <AllVoices client:only="react" />
+      <AllVoices client:load />
     </div>
   </div>
   
