--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -25,6 +25,31 @@
         </div>
       </div>
     </div>
+    <div
+      class="grid grid-cols-1 gap-4 mt-6 items-center list-none lg:grid-cols-2 lg:gap-24">
+    
+      <div
+        class="lg:mt-0 mt-12 h-full hidden lg:block rounded-3xl overflow-hidden border border-gray-200">
+        <div class="bg-gray-100 p-8 rounded-2xl overflow-hidden">
+          <img
+            alt="Lexingtøn thumbnail"
+            class="border border-gray-200 lg:rounded-3xl object-cover rounded shadow-2xl"
+            src="images/compressed/Languages  Image without bg-min.png"  
+          />
+        </div>
+      </div>
+      <div class="text-center lg:text-right">
+        <div>
+          <p
+            class="text-4xl tracking-tight text-left font-medium text-black md:text-5xl font-display">
+            Used by 100+ Teams to Create Voice Agents at Scale
+          </p>
+          <p class="text-base mt-4 text-left text-gray-500">
+            Hundreds of use cases from E-commerce, Clinics, Dentists, Healthcare, Real Estate, Solar, Car Dealerships, and Restaurants.Featuring diverse accents and styles tailored to meet your needs.<a href="/ai-voice-demo" class="text-accent-500">Explore Now</a>
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="mt-24 w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
       <div>
         <div class="gap-3 lg:inline-flex lg:items-center">
