new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -317,6 +317,20 @@
     image: "/images/Blogs/blog38.jpeg",
     link: "/The-Benefits-of-AI-Voice-Agents-in-Car-Dealerships",
   },
+  {
+    id: 39,
+    title: "Building a Better Call Center with AI Voice: A Step-by-Step Guide",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog39.jpeg",
+    link: "/Building-a-Better-Call-Center-with-AI-Voice-A-Step-by-Step-Guide",
+  },
+  {
+    id: 40,
+    title: "Revolutionizing Retail with AI Voice: Enhancing Customer Service and Sales",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog40.jpeg",
+    link: "/Revolutionizing-Retail-with-AI-Voice-Enhancing-Customer-Service-and-Sales",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
