social links added

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -3,7 +3,7 @@
     <div class="lg:absolute lg:inset-0 lg:left-1/2">
 
       <img
-        class=" h-full md:hidden"
+        class=" h-full md:hidden w-full object-fill"
         src="/images/compressed/Call Support image without bg-1.png"
         alt=""
       />
