--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -48,6 +48,13 @@
             </li>
             <li>
               <a
+                href="https://www.notion.so/ai-automation/Join-CallSupport-1625973964208049a0a2f98c072a8ea4?pvs=4"
+                class="hover:text-black">
+                Careers
+              </a>
+            </li>
+            <li>
+              <a
                 href="/terms"
                 class="hover:text-black">
                 Terms
@@ -115,6 +122,20 @@
                 href="https://x.com/callsupport"
                 class="hover:text-black">
                 @callsupport
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://discord.gg/2XRbW5xF"
+                class="hover:text-black flex items-center gap-1">
+                <img src="/discord-icon-svgrepo-com.svg" alt="Discord" class="w-4 h-4" />Discord
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/callsupport/"
+                class="hover:text-black flex items-center gap-1">
+                <img src="/linkedin-svgrepo-com.svg" alt="LinkedIn" class="w-4 h-4" />LinkedIn
               </a>
             </li>
           </ul>
