new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -331,6 +331,13 @@
     image: "/images/Blogs/blog40.jpeg",
     link: "/Revolutionizing-Retail-with-AI-Voice-Enhancing-Customer-Service-and-Sales",
   },
+  {
+    id: 41,
+    title: "The Rise of AI Voice in Banking Customer Service: Improving Security and Efficiency",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog41.jpeg",
+    link: "/The-Rise-of-AI-Voice-in-Banking-Customer-Service-Improving-Security-and-Efficiency",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
