new blogs added

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -29,12 +29,17 @@
           </svg>
         </button>
       </div>
-
+     
       <!-- Navigation Menu -->
       <nav
         id="navMenu"
         class="hidden md:flex flex-col md:flex-row md:items-center md:justify-end"
       >
+      <a
+      href="/demos"
+      class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
+      >Demos</a
+    >
         <!-- Products Dropdown -->
         <div id="productsDropdown" class="relative dropdown-container">
           <button
@@ -73,11 +78,11 @@
               class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
               >AI Concierge</a
             >
-            <a
+            <!-- <a
               href="/ai-voice-demo"
               class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
               >AI Voice Demos</a
-            >
+            > -->
           </div>
         </div>
 
