--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -45,7 +45,7 @@
             Used by 100+ Teams to Create Voice Agents at Scale
           </p>
           <p class="text-base mt-4 text-left text-gray-500">
-            Hundreds of use cases from E-commerce, Clinics, Dentists, Healthcare, Real Estate, Solar, Car Dealerships, and Restaurants.Featuring diverse accents and styles tailored to meet your needs.<a href="/ai-voice-demo" class="text-accent-500">Explore Now</a>
+            Hundreds of use cases from E-commerce, Clinics, Dentists, Healthcare, Real Estate, Solar, Car Dealerships, and Restaurants.Featuring diverse accents and styles tailored to meet your needs.<a href="/demos" class="text-accent-500">Explore Now</a>
           </p>
         </div>
       </div>
