--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -48,7 +48,7 @@
             </li>
             <li>
               <a
-                href="https://www.notion.so/ai-automation/Join-CallSupport-1625973964208049a0a2f98c072a8ea4?pvs=4"
+                href="https://ai-automation.notion.site/Join-CallSupport-1625973964208049a0a2f98c072a8ea4?pvs=4"
                 class="hover:text-black">
                 Careers
               </a>
@@ -116,17 +116,17 @@
           <h3 class="text-lg text-black font-medium tracking-tight">Socials</h3>
           <ul
             role="list"
-            class="mt-4 space-y-1">
-            <li>
+            class="mt-1 space-y-1">
+            <!-- <li>
               <a
                 href="https://x.com/callsupport"
                 class="hover:text-black">
                 @callsupport
               </a>
-            </li>
+            </li> -->
             <li>
               <a
-                href="https://discord.gg/2XRbW5xF"
+                href="https://discord.gg/BUhGYRY3z4"
                 class="hover:text-black flex items-center gap-1">
                 <img src="/discord-icon-svgrepo-com.svg" alt="Discord" class="w-4 h-4" />Discord
               </a>
