new pricing added

--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -39,10 +39,13 @@ import Annual from "./components/annual.astro";
       </div>
     </div>
   <!-- Enterprise Pricing Section  -->
-  <div class="mx-auto pt-12 gap-y-10 ">
-    <section
+  <div class="mx-auto pt-1 gap-y-10 ">
+    <!-- <section
     class="flex py-4 flex-col lg:flex-row items-start justify-between px-6 lg:py-8 lg:px-12 bg-[url('/images/compressed/EnterPrise-min.png')]  bg-center bg-no-repeat rounded-3xl relative text-white shadow-none lg:gap-4"
-  >
+  > -->
+  <section
+  class="flex py-4 flex-col lg:flex-row "
+>
       <!-- Dedicated Badge -->
       <!-- <div
         class="hidden md:flex absolute top-4 left-10 bg-gray-800 border-2 border-gray-100 text-sm px-3 py-1 rounded-full flex items-center"
@@ -65,15 +68,15 @@ import Annual from "./components/annual.astro";
       </div> -->
   
       <!-- Enterprise Pricing Section Content -->
-      <div class="flex flex-col lg:flex-row items-center lg:items-start z-10 flex-grow">
+      <!-- <div class="flex flex-col lg:flex-row items-center lg:items-start z-10 flex-grow">
         <div class="lg:mr-8">
           <h1 class="text-2xl font-semibold">Enterprise Plan</h1>
           <div class="max-w-xl mt-2">
             <p class="text-sm text-white">
               For businesses with large volumes, data or deployment requirements, or support needs.
-            </p>
+            </p> -->
             <!-- Feature List -->
-            <div class="mt-4 grid grid-cols-2 gap-4 text-sm text-white">
+            <!-- <div class="mt-4 grid grid-cols-2 gap-4 text-sm text-white">
               <div class="flex items-start">
                 <span class="mr-2 text-white">
                   <svg
@@ -142,10 +145,10 @@ import Annual from "./components/annual.astro";
             
           </div>
         </div>
-      </div>
+      </div> -->
   
       <!-- Call to Action Button -->
-      <a
+      <!-- <a
         class="mt-8 mx-auto md:mx-0 inline-flex items-center justify-between cursor-pointer px-16 py-3 h-12 md:mt-auto text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
         aria-label="Enterprise tier"
         href="/enterprise"
@@ -167,13 +170,13 @@ import Annual from "./components/annual.astro";
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
-      </a>
+      </a> -->
     </section>
   </div>
   
   
 
-    <div class="mx-auto pt-12 lg:py-16">
+    <div class="mx-auto pt-1 lg:py-1">
       <div class="grid grid-cols-2 gap-[6vh] md:gap-2 lg:mt-8 md:grid-cols-6 mt-6">
             
         <div class="flex justify-center col-span-1 ">
