--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -1,13 +1,14 @@
 <div
-  class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2"
+  class="grid max-w-2xl grid-cols-1 py-4 -mx-4 xl:-mx-12 sm:grid-cols-2 lg:grid-cols-3 gap-y-10 sm:mx-auto lg:max-w-none xl:gap-x-12"
 >
-  <section class="flex flex-col px-6 lg:py-8 rounded-3xl bg-gray-50">
+
+  <!-- <section class="flex flex-col px-6 lg:py-8 rounded-3xl bg-gray-50">
     <h3 class="mt-5 text-lg text-black font-display">Free Plan</h3>
     <p class="mt-2 text-sm text-gray-500">Best for testing out our tool.</p>
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-      €0
+    $0
     </p>
     <ul
       role="list"
@@ -37,7 +38,7 @@
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Chat support</span
+          >Discord support</span
         >
       </li>
     </ul>
@@ -46,46 +47,46 @@
       aria-label="Wannabe tier"
       href="https://app.callsupport.ai">Get started</a
     >
-  </section>
+  </section> -->
   <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-    <h3 class="mt-5 text-lg text-black font-display">Starter, <span class="text-sm font-display  text-gray-600">then $0.13/min</span></h3>
+    <h3 class="mt-5 text-lg text-black font-display">Pay as you go, <span class="text-sm font-display  text-gray-600">then $0.15/min </span></h3>
     <p class="mt-2 text-sm text-gray-500">
       Good for those trying to get there, but are too far from it.
     </p>
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-      €19
+    $0
     </p>
     <ul
       role="list"
       class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
     >
-      <li class="flex items-center">
-        <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4">
-          50 min/month
-        </span>
+    <li class="flex items-center">
+      <ion-icon
+        class="w-4 h-4 md hydrated"
+        name="checkmark-outline"
+        role="img"
+        aria-label="checkmark outline"></ion-icon><span class="ml-4"
+        >10 min of free access 
+      </span>
+    </li>
+    <li class="flex items-center">
+      <ion-icon
+      class="w-4 h-4 md hydrated"
+      name="checkmark-outline"
+      role="img"
+      aria-label="checkmark outline"></ion-icon><span class="ml-4">
+        20k Knowledge base </span
+        >
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >1 free phone number
-        </span>
-      </li>
-      <li class="flex items-center">
-        <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4">
-          Upload 100k words as knowledge</span
+        class="w-4 h-4 md hydrated"
+        name="checkmark-outline"
+        role="img"
+        aria-label="checkmark outline"></ion-icon><span class="ml-4"
+        >10 Free Knowledge Bases</span
         >
       </li>
       <li class="flex items-center">
@@ -93,28 +94,28 @@
           class="w-4 h-4 md hydrated"
           name="checkmark-outline"
           role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >10 Concurrent Calls
+          aria-label="checkmark outline"></ion-icon><span class="ml-4">
+            Library of tutorials to set it up. 
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Chat and Email support</span
-        >
-      </li>
-      <li class="flex items-center">
-        <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Analytics
-        </span>
-      </li>
+        class="w-4 h-4 md hydrated"
+        name="checkmark-outline"
+        role="img"
+        aria-label="checkmark outline"></ion-icon><span class="ml-4"
+        >Chat help
+      </span>
+    </li>
+    <li class="flex items-center">
+      <ion-icon
+        class="w-4 h-4 md hydrated"
+        name="checkmark-outline"
+        role="img"
+        aria-label="checkmark outline"></ion-icon><span class="ml-4"
+        >Dedicated Discord to answer any questions
+      </span>
+    </li>
     </ul>
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
@@ -125,14 +126,16 @@
   <section
     class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:order-none"
   >
-    <h3 class="mt-5 text-lg text-white font-display">Pro,  <span class="text-sm font-display  text-white">then $0.13/min</span> </h3>
+    <h3 class="mt-5 text-lg text-white font-display">Done for you   
+      <!-- <span class="text-sm font-display  text-white">99$/ month</span>  -->
+    </h3>
     <p class="mt-2 text-sm text-accent-100">
       Best for growing companies or those who need some help.
     </p>
     <p
       class="order-first text-5xl font-light tracking-tight text-white font-display"
     >
-      €59
+    $99
     </p>
     <ul
       role="list"
@@ -144,7 +147,7 @@
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >140 min/month
+          >Prompt Engineering Support
         </span>
       </li>
       <li class="flex items-center">
@@ -153,38 +156,37 @@
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >3 free phone numbers
-        </span>
-      </li>
-
-      <li class="flex items-center">
-        <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Upload 200k words as knowledge
+          >Test out all prompts
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >10 Concurrent Calls
-        </span>
-      </li>
-      <li class="flex items-center">
-        <ion-icon
-          class="w-4 h-4 md hydrated"
-          name="checkmark-outline"
-          role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Priority support
-        </span>
-      </li>
-      <li class="flex items-center">
+        class="w-4 h-4 md hydrated"
+        name="checkmark-outline"
+        role="img"
+        aria-label="checkmark outline"></ion-icon><span class="ml-4"
+        >10 Free Knowledge Bases
+      </span>
+    </li>
+    <li class="flex items-center">
+      <ion-icon
+      class="w-4 h-4 md hydrated"
+      name="checkmark-outline"
+      role="img"
+      aria-label="checkmark outline"></ion-icon><span class="ml-4"
+      >Priority support
+    </span>
+  </li>
+  <li class="flex items-center">
+    <ion-icon
+      class="w-8 h-8 md hydrated"
+      name="checkmark-outline"
+      role="img"
+      aria-label="checkmark outline"></ion-icon><span class="ml-4 text-sm"
+      > Help setting up integrations with CRM or any existing tools
+    </span>
+  </li>
+      <!-- <li class="flex items-center">
         <ion-icon
           class="w-4 h-4 md hydrated"
           name="checkmark-outline"
@@ -192,8 +194,8 @@
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
           Set up for you</span
         >
-      </li>
-      <li class="flex items-center">
+      </li> -->
+      <!-- <li class="flex items-center">
         <ion-icon
           class="w-4 h-4 md hydrated"
           name="checkmark-outline"
@@ -201,20 +203,25 @@
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
           >Analytics
         </span>
-      </li>
+      </li> -->
     </ul>
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
+      aria-label="Indie hacker tier"
+      href="https://cal.com/callsupport/30min">Book a Call</a
+    >
+    <a
+      class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-2 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
       aria-label="Indie hacker tier"
       href="https://app.callsupport.ai">Get started</a
     >
   </section>
   <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
     <h3 class="mt-5 text-lg text-black font-display">
-      Growth,
-      <span class="text-sm font-display  text-gray-600">
+      Enterprise
+      <!-- <span class="text-sm font-display  text-gray-600">
           then $0.08-0.13/min
-      </span>
+      </span> -->
   </h3>
     <p class="mt-2 text-sm text-gray-500">
       For teams, needing top performance.
@@ -222,7 +229,7 @@
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-      €450
+    Enterprise
     </p>
     <ul
       role="list"
@@ -230,58 +237,67 @@
     >
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
+          class="w-5 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >1500 min/month</span
+          >Includes everything from pay as you go</span
         >
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
+          class="w-8 h-8 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-          Unlimited Voice Agents
+            Discounted pricing based on volumes. (as low as $0.10 per minute)
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
+          class="w-5 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >10 Concurrent Calls
+          >Dedicated Servers and GPU setups
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
+          class="w-6 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Analytics</span
+          >Custom concurrent calls based on volumes (50+)</span
         >
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-4 h-4 md hydrated"
+          class="w-8 h-8 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-          24 months data</span
+            Premium private Slack channel support with dedicated support teams.</span
+        >
+      </li>
+      <li class="flex items-center">
+        <ion-icon
+          class="w-5 h-6 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4">
+            Fully Compliant (GDPR, HIPAA), Uptime SLA</span
         >
       </li>
     </ul>
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
       aria-label="Big fish tier"
-      href="https://app.callsupport.ai"
+      href="/enterprise"
       target="_blank"
       rel="noopener noreferrer"
     >
-      Get started
+    Book a Call
     </a>
   </section>
 </div>
