new pricing added

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -49,6 +49,7 @@
             <li>
               <a
                 href="https://ai-automation.notion.site/Join-CallSupport-1625973964208049a0a2f98c072a8ea4?pvs=4"
+                target="_blank"
                 class="hover:text-black">
                 Careers
               </a>
@@ -127,6 +128,7 @@
             <li>
               <a
                 href="https://discord.gg/BUhGYRY3z4"
+                target="_blank"
                 class="hover:text-black flex items-center gap-1">
                 <img src="/discord-icon-svgrepo-com.svg" alt="Discord" class="w-4 h-4" />Discord
               </a>
@@ -134,6 +136,7 @@
             <li>
               <a
                 href="https://www.linkedin.com/company/callsupport/"
+                target="_blank"
                 class="hover:text-black flex items-center gap-1">
                 <img src="/linkedin-svgrepo-com.svg" alt="LinkedIn" class="w-4 h-4" />LinkedIn
               </a>
