--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -126,7 +126,7 @@
   <section
     class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:order-none"
   >
-    <h3 class="mt-5 text-lg text-white font-display">Done for you   
+    <h3 class="mt-5 text-lg text-white font-display">Done for you, $99/month   
       <!-- <span class="text-sm font-display  text-white">99$/ month</span>  -->
     </h3>
     <p class="mt-2 text-sm text-accent-100">
