cal com comming soon removed

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -338,6 +338,13 @@
     image: "/images/Blogs/blog41.jpeg",
     link: "/The-Rise-of-AI-Voice-in-Banking-Customer-Service-Improving-Security-and-Efficiency",
   },
+  {
+    id: 42,
+    title: "The Power of Emotion AI in Call Centers: Understanding and Responding to Customer Sentiment",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog42.jpeg",
+    link: "/The-Power-of-Emotion-AI-in-Call-Centers-Understanding-and-Responding-to-Customer-Sentiment",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
