new blogs and metas added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -345,6 +345,13 @@
     image: "/images/Blogs/blog42.jpeg",
     link: "/The-Power-of-Emotion-AI-in-Call-Centers-Understanding-and-Responding-to-Customer-Sentiment",
   },
+  {
+    id: 43,
+    title: "How AI Voice Enhances the Restaurant Customer Experience",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog43.jpeg",
+    link: "/How-AI-Voice-Enhances-the-Restaurant-Customer-Experience",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
