--- a/src/pages/ai-answering-service.astro
+++ b/src/pages/ai-answering-service.astro
@@ -5,7 +5,8 @@ import Service from "../components/infopages/products/Service.astro";
 ---
 
 <head>
-  <title>Ai Answering Service </title>
+  <title>AI Answering Service get 24/7 Virtual Receptionists for Your Business  </title>
+  <meta name="description" content="Get a reliable and affordable AI answering service for your business. Our solutions offer 24/7 availability." />
 </head>
 
 <BaseLayout>
