--- a/src/pages/ai-concierge.astro
+++ b/src/pages/ai-concierge.astro
@@ -5,7 +5,8 @@ import Concierge from "../components/infopages/products/Concierge.astro";
 ---
 
 <head>
-  <title>Ai Concierge  </title>
+  <title>AI Concierge Service: 24/7 Personalized Assistance at Your Fingertips  </title>
+  <meta name="description" content="Elevate your guest experience with the best AI Concierge Service. Our intelligent system provides personalized recommendations." />
 </head>
 
 <BaseLayout>
