--- a/src/pages/receptionist.astro
+++ b/src/pages/receptionist.astro
@@ -4,7 +4,8 @@ import Receptionist from "../components/infopages/products/Receptionist.astro";
 
 ---
 <head>
-  <title>AI Receptionist </title>
+  <title>Best AI Receptionist | Improve Customer Service Efficiency </title>
+  <meta name="description" content="Streamline your customer service with the best AI Receptionist. Our intelligent system handles calls efficiently, freeing up your team to focus on more important tasks." />
 </head>
 <BaseLayout>
   <Receptionist />
