--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -352,6 +352,20 @@
     image: "/images/Blogs/blog43.jpeg",
     link: "/How-AI-Voice-Enhances-the-Restaurant-Customer-Experience",
   },
+  {
+    id: 44,
+    title: "AI Voice Receptionist Prompts to Gain Better Customer Service",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog44.jpeg",
+    link: "/AI-Voice-Receptionist-Prompts-to-Gain-Better-Customer-Service",
+  },
+  {
+    id: 45,
+    title: "Top 5 AI Answering Service Features Your Business Needs",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog45.jpeg",
+    link: "/Top-5-AI-Answering-Service-Features-Your-Business-Needs",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
