--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -208,7 +208,7 @@
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
       aria-label="Indie hacker tier"
-      href="https://cal.com/callsupport/30min">Book a Call</a
+      href="https://cal.com/callsupport/30min" target="_blank" rel="noopener noreferrer">Book a Call</a
     >
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-2 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
